TrinityAdmin Changelog

-=[ Revision 38 - 1/8/2011]=-
- Misc code formatting cleanup
- ADD aspeed, arena, bwalk, drunk, fly, gender, honor, mount, phase, runicpower, speed, standstate, swim, and tp to Modify
- Updated enUS locale for above adds
- Rearranged GOB tab, added labels. Preparing to add more content here.
- ADD .gob activate, add temp, info, phase to GOB tab
- updated enUS locale for above adds
- ADD/MOD added missing tables to Reload. Removed individual tables that are reloaded with an all_xxxx command... 
	so now the list fits the screen, but you may have to choose an all_xxxx command to reload the table you want.

-=[ Revision 37 - 1/4/2011]=-
- Wiki changes

-=[ Revision 36 - 1/4/2011]=-
- You'd think after years of programming experience, I'd not get in this sort of mess. Like letting my code on two
different machines get out of sync. Like trying to commit with conflicts o' plenty. Fixed. Ignore r25-r35.


-=[ Revision 24 - 1/4/2011]=-
- Merry (Belated) Christmas!
- Numerous bugs fixed from issue tracker
- New camera functions and rearrangement of model frame on Char and NPC tabs
- Speed and Scale sliders now have Reset buttons
- Tweak to DisplayID browser 
- Found some more .namego and .goname, changed to .appear and .summon

-=[ Revision 23 - 12/12/2010]=-
- ADD NPC DisplayID broser

-=[ Revision 22 - 9/6/2010]=-
- FIX version string

-=[ Revision 21 - 9/6/2010]=-
- FIX for new .summon, .appear, .groupsummon commands

-=[ Revision 20 - 8/10/2010]=-
- FIX Whisper issues with 3.3.5a client
- MOD Revive button on Char tab is now always available
- FIX Server Info spamming when Show Chat Output is ON.


-=[ Revision 19 - 4/13/2010]=-
- FIX issue 36 WHO tab overlap
- FIX issue 35 TICKET - Online list not working
- FIX issue with Nil object error in tele scrolling on startup
- FIX Ticket scrolling issue reported by Kitharo
- ADD MISC tab, checkbox for Chat Output. When off (default), TrinityAdmin does not display output of most 